# pixsage

./: .gitignore  README.md  photo-corpus-pipeline-spec.md  pyproject.toml  pytest_output.txt
docs/: backlog.md  photographer-handoff.md
docs/superpowers/plans/: 2026-05-09-phase3-search-implementation.md  2026-05-09-tier1-mvp-implementation.md  2026-05-10-launcher-plan-1-path-translation.md  2026-05-10-launcher-plan-2-runtime-build.md  2026-05-10-launcher-plan-3-clickable-launchers.md  2026-05-12-exif-gps-extraction.md  2026-05-12-multi-catalog-search.md  2026-05-17-directory-picker.md  2026-05-22-deferred-model-load-loading-screen.md  2026-05-23-home-screen-restyle.md
docs/superpowers/specs/: 2026-05-09-phase3-search-design.md  2026-05-09-tier1-mvp-design.md  2026-05-10-clickable-launcher-design.md  2026-05-12-multi-catalog-search-design.md  2026-05-17-directory-picker-design.md  2026-05-22-deferred-model-load-loading-screen-design.md  2026-05-23-home-screen-restyle-design.md
scripts/: build_iphone_map.py  cluster_analysis.py  dashboard.py  fetch_demo_corpus.py  generate_report.py  load_export.py  smoke_phase3.py
scripts/launcher/: build_runtime.py  download_models.py  install_runtime.py  launcher_templates.py  pbs_targets.py  stage_folder.py
src/pixsage/: __main__.py  analysis.py  catalog.py  cli.py  clusters.py  config.py  device.py  discovery.py  embed_runner.py  geo_runner.py  images.py  multi_search.py  path_translation.py  registry.py  search.py  vectors.py  vocabulary.py  walker.py  xmp.py
src/pixsage/embedders/: __init__.py  base.py  mock.py  siglip2.py
src/pixsage/geolocators/: __init__.py  base.py  geoclip.py  mock.py
src/pixsage/taggers/: __init__.py  base.py  florence2.py  mock.py  ramplusplus.py
src/pixsage/web/: __init__.py  app.py  loader.py  routes.py  thumbs.py
src/pixsage/web/static/: style.css
src/pixsage/web/templates/: _card.html  _catalogs.html  _results.html  cluster.html  explore.html  index.html  loading.html  photo.html
tests/: conftest.py  demo_corpus_urls.txt  test_analysis.py  test_catalog.py  test_catalog_camera_gps.py  test_catalog_caption.py  test_catalog_geo.py  test_cli.py  test_cli_backfill_gps.py  test_cli_dupe_paths.py  test_cli_embed.py  test_cli_geolocate.py  test_cli_run.py  test_cli_serve.py  test_cli_stage_launchers.py  test_config.py  test_config_phase3.py  test_device.py  test_discovery.py  test_embed_runner.py  test_embedders_mock.py  test_embedders_siglip2.py  test_geo_runner.py  test_geolocators_mock.py  test_images.py  test_loader.py  test_meta_table.py  test_multi_search.py  test_path_translation.py  test_registry.py  test_search.py  test_serve_path_translation.py  test_taggers_mock.py  test_taggers_ramplusplus_ckpt.py  test_user_locations.py  test_vectors.py  test_vocabulary.py  test_walker.py  test_web_app.py  test_web_app_multi.py  (+8 more)
tests/launcher/: conftest.py  test_build_runtime.py  test_download_models.py  test_install_runtime.py  test_launcher_templates.py  test_pbs_targets.py  test_serve_deps.py  test_smoke.py  test_stage_folder.py
