[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pixsage"
version = "0.1.0"
description = "Photographer's photo corpus pipeline — Tier 1 MVP."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "pydantic>=2.5",
  "typer>=0.12",
  "tqdm>=4.66",
  "pillow>=10.0",
  "pillow-heif>=0.16",
  "numpy>=1.26",
  "pyarrow>=15",
]

[project.optional-dependencies]
taggers = [
  "torch>=2.2",
  "transformers>=4.40",
  "rawpy>=0.21",
  "ram @ git+https://github.com/xinyu1205/recognize-anything.git",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
]
search = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "jinja2>=3.1",
  "httpx>=0.27",
]

[project.scripts]
pixsage = "pixsage.cli:app"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pixsage"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py311"
